clusters/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: apps
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 9090
    - name: 9000-tcp
      protocol: TCP
      port: 9000
      targetPort: 9000
...
